test/kubernetes/e2e/features/http_listener_options/testdata/basic-http-lis-opt.yaml
apiVersion: gateway.solo.io/v1
kind: HttpListenerOption
metadata:
  name: buffer-limit
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  options:
    httpConnectionManagerSettings:
      serverName: "unit-test v4.19"
